Fixed code smells in ml-plan and its CLI.